# discord-py-self-mcp

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/discord_py_self/: __init__.py  server.py
