[project]
name = "discord-self-mcp-skill"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "discord.py-self==2.0.1",
    "mcp>=1.27",
    "protobuf",
    "audioop-lts; python_version >= '3.13'",
    "python-dotenv",
]

[project.scripts]
discord-py-self-mcp = "discord_py_self.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_py_self"]
